frontend/components/compare/css/compare.css
compare .topBorder {
    border-top: 1px solid #e1e1e1;
}

compare .modelType {
    color: grey;
}

compare .modelSides {

}

compare md-tabs md-tabs-content-wrapper {
    height: 100%;
}

compare .compareState {
    margin-left: 30px;
}

compare md-tab-item {
    width: 50%;
}

compare .compareButton {
    text-align: center;
    margin: auto !important;
}

compare .compareVisibility {
    margin-right: 15px;
    min-width: initial;
}

/* compare .compareModel:hover {
    background-color: #eeeeee;
} */

md-menu-content .selectedRev {
    font-weight: bold;
}

md-menu-content .authorDate {
    color: #a6a6a6 !important;
}

compare .modelType {
    text-align: center;
    padding: 10px;
    cursor: pointer;
}

compare .selfDiffWarning {
    text-align: center;
    margin: 40px;
}

compare .modelTypeSelection {
}

compare .revisionText {
    font-size: 12px;
    color: grey;
}

compare .modelText {
    margin: 0;
    margin-bottom: 10px;
}

compare .visible {
    color: #0c2f54;
}

compare md-tabs-content-wrapper md-tab-content {
    margin-bottom: 125px;
    padding: 8px;
}

compare md-tabs-content-wrapper md-tab-content md-content {
    background: white;
}

compare md-tabs-content-wrapper md-tab-content > div {
    border: rgba(0,0,0,0.1) 1px solid;
}

compare .topContainer {
    height: 100%;
}

compare .bottomContainer {
    z-index: 3;
    position: absolute;
    bottom: 0;
    background: #fafafa;
    width: 100%;
    padding-top: 5px;
    padding-bottom: 15px; 
}

compare .bottomSlider {
    margin-left: 30px;
}

